tests/baselines/reference/classAbstractMergedDeclaration.errors.txt
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractMergedDeclaration.ts(7,16): error TS2518: Only an ambient class can be merged with an interface.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractMergedDeclaration.ts(8,11): error TS2518: Only an ambient class can be merged with an interface.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractMergedDeclaration.ts(10,11): error TS2518: Only an ambient class can be merged with an interface.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractMergedDeclaration.ts(11,16): error TS2518: Only an ambient class can be merged with an interface.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractMergedDeclaration.ts(13,16): error TS2300: Duplicate identifier 'CC1'.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractMergedDeclaration.ts(14,7): error TS2300: Duplicate identifier 'CC1'.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractMergedDeclaration.ts(16,7): error TS2300: Duplicate identifier 'CC2'.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractMergedDeclaration.ts(17,16): error TS2300: Duplicate identifier 'CC2'.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractMergedDeclaration.ts(25,24): error TS2300: Duplicate identifier 'DCC1'.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractMergedDeclaration.ts(26,15): error TS2300: Duplicate identifier 'DCC1'.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractMergedDeclaration.ts(28,15): error TS2300: Duplicate identifier 'DCC2'.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractMergedDeclaration.ts(29,24): error TS2300: Duplicate identifier 'DCC2'.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractMergedDeclaration.ts(31,1): error TS2511: Cannot create an instance of the abstract class 'CM'.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractMergedDeclaration.ts(32,1): error TS2511: Cannot create an instance of the abstract class 'MC'.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractMergedDeclaration.ts(33,1): error TS2511: Cannot create an instance of the abstract class 'CI'.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractMergedDeclaration.ts(34,1): error TS2511: Cannot create an instance of the abstract class 'IC'.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractMergedDeclaration.ts(35,1): error TS2511: Cannot create an instance of the abstract class 'CC1'.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractMergedDeclaration.ts(37,1): error TS2511: Cannot create an instance of the abstract class 'DCI'.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractMergedDeclaration.ts(38,1): error TS2511: Cannot create an instance of the abstract class 'DIC'.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractMergedDeclaration.ts(39,1): error TS2511: Cannot create an instance of the abstract class 'DCC1'.


==== tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractMergedDeclaration.ts (20 errors) ====
    abstract class CM {}
    module CM {}
    
    module MC {}
    abstract class MC {}
    
    abstract class CI {}
                   ~~
!!! error TS2518: Only an ambient class can be merged with an interface.
    interface CI {}
              ~~
!!! error TS2518: Only an ambient class can be merged with an interface.
    
    interface IC {}
              ~~
!!! error TS2518: Only an ambient class can be merged with an interface.
    abstract class IC {}
                   ~~
!!! error TS2518: Only an ambient class can be merged with an interface.
    
    abstract class CC1 {}
                   ~~~
!!! error TS2300: Duplicate identifier 'CC1'.
    class CC1 {}
          ~~~
!!! error TS2300: Duplicate identifier 'CC1'.
    
    class CC2 {}
          ~~~
!!! error TS2300: Duplicate identifier 'CC2'.
    abstract class CC2 {}
                   ~~~
!!! error TS2300: Duplicate identifier 'CC2'.
    
    declare abstract class DCI {}
    interface DCI {}
    
    interface DIC {}
    declare abstract class DIC {}
    
    declare abstract class DCC1 {}
                           ~~~~
!!! error TS2300: Duplicate identifier 'DCC1'.
    declare class DCC1 {}
                  ~~~~
!!! error TS2300: Duplicate identifier 'DCC1'.
    
    declare class DCC2 {}
                  ~~~~
!!! error TS2300: Duplicate identifier 'DCC2'.
    declare abstract class DCC2 {}
                           ~~~~
!!! error TS2300: Duplicate identifier 'DCC2'.
    
    new CM;
    ~~~~~~
!!! error TS2511: Cannot create an instance of the abstract class 'CM'.
    new MC;
    ~~~~~~
!!! error TS2511: Cannot create an instance of the abstract class 'MC'.
    new CI;
    ~~~~~~
!!! error TS2511: Cannot create an instance of the abstract class 'CI'.
    new IC;
    ~~~~~~
!!! error TS2511: Cannot create an instance of the abstract class 'IC'.
    new CC1;
    ~~~~~~~
!!! error TS2511: Cannot create an instance of the abstract class 'CC1'.
    new CC2;
    new DCI;
    ~~~~~~~
!!! error TS2511: Cannot create an instance of the abstract class 'DCI'.
    new DIC;
    ~~~~~~~
!!! error TS2511: Cannot create an instance of the abstract class 'DIC'.
    new DCC1;
    ~~~~~~~~
!!! error TS2511: Cannot create an instance of the abstract class 'DCC1'.
    new DCC2;